# Python-Tutorial

01_class/: 01_basic_class.py  02_property_setter.py  03_class_method.py  04_static_method.py  05_abstract_method.py  06_magic_call.py  07_magic_context.py  08_args_kwargs.py  09_decorater.py  10_type_hint.py
02_sync/: 01_sync_io.py  02_blocking_vs_sleep.py  04_async_concurrent.py  07_multiprocessing_basic.py  09_context_manager.py  10_api_call.py
02_sync/02_sync/: 01_sync_io.py  03_async_basic.py  05_threading_basic.py  06_threading_race_condition.py  08_GIL.py
02_sync/10_FastAPI/: main.py
fastapi-assignment_01/: README.md  pyproject.toml
fastapi-assignment_01/src/api/: __init__.py  chat.py
fastapi-assignment_01/src/models/: __init__.py  chat.py
fastapi-assignment_01/src/services/: chat_service.py
fastapi-assignment_01/tests/: test_chat_api.py
fastapi-assignment_02/: README.md  pyproject.toml
fastapi-assignment_02/src/: __init__.py  main.py
fastapi-assignment_02/src/api/: chat.py
fastapi-assignment_02/src/models/: chat.py
fastapi-assignment_02/src/services/: __init__.py  chat_service.py
fastapi-assignment_02/tests/: test_chat_api.py
fastapi-assignment_03/: README.md  pyproject.toml
fastapi-assignment_03/data/: chat_history.db
fastapi-assignment_03/src/: main.py
fastapi-assignment_03/src/api/: __init__.py  chat.py  histories.py  search.py
fastapi-assignment_03/src/core/: __init__.py  config.py  db.py  errors.py  (+3 more)
fastapi-assignment_03/tests/: test_chat_history_api.py  test_chat_llm_integration_api.py  test_llm_gateway_integration.py
(+27 files in other folders)
